src/objects/Agreement_DocuSign_Default_Recipient__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List Down all docusign default recipients for Legal agreement types</description>
    <fields>
        <fullName>Agreement_RecordTypeId__c</fullName>
        <description>Salesforce generated 18 digit Id for record type.</description>
        <inlineHelpText>Salesforce generated 18 digit Id for record type.</inlineHelpText>
        <label>Agreement RecordTypeId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsToAdd__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To add into default recipient list.</description>
        <inlineHelpText>Mark true if this has to be populated as default recipient.</inlineHelpText>
        <label>IsToAdd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_User_Recipient__c</fullName>
        <description>Define recipients other than user.</description>
        <inlineHelpText>Define recipients other than user.</inlineHelpText>
        <label>Non User Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Recipient__c</fullName>
        <description>Specify email Id for recipient.</description>
        <inlineHelpText>Specify email Id for recipient.</inlineHelpText>
        <label>Other Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <description>Default recipient name</description>
        <inlineHelpText>Default recipient name</inlineHelpText>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <description>Define value as Signer or Carbon Copy</description>
        <inlineHelpText>Define value as Signer or Carbon Copy</inlineHelpText>
        <label>Recipient Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Order__c</fullName>
        <description>Define routing sequence</description>
        <inlineHelpText>Define routing sequence</inlineHelpText>
        <label>Routing Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreement DocuSign Default Recipient</label>
</CustomObject>